--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "morgan": "^1.9.0",
     "mysql": "^2.15.0",
     "nconf": "^0.8.5",
+    "sql-query": "^0.1.26",
     "winston": "^2.4.0"
   }
 }
