Add weapon controller. mysql setting was moved to db-conf db-conf added to gitignore

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "type": "git",
     "url": "git+https://github.com/dschoerk/cod4_stats_backend.git"
   },
-  "author": "Vasiliy Komarov",
+  "author": "D43 Community",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/dschoerk/cod4_stats_backend/issues"
