--- a/src/config/config.json
+++ b/src/config/config.json
@@ -1,10 +1,3 @@
 {
-  "port": 3000,
-  "mysql": {
-    "host": "localhost",
-    "port": 3306,
-    "database": "stats",
-    "user": "root",
-    "password": "root"
-  }
+  "port": 3000
 }
